# dedteplodar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  main_bot.py  pyproject.toml  requirements.txt  start_admin.sh  test_admin_api.py
admin/: README.md  __init__.py  dependencies.py  eval_preset.py  main.py
admin/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
admin/routers/: __init__.py  categories.py  chat.py  chunks.py  documents.py  eval.py  faq.py  faq_entries.py  pipeline.py  products.py  query_logs.py  synonyms.py
admin/schemas/: __init__.py  categories.py  chat.py  chunks.py  documents.py  eval.py  faq_entries.py  pipeline.py  products.py  query_logs.py  synonyms.py
admin/services/: __init__.py  eval_compare.py  eval_service.py
base/: company_faq.yaml  dealers.yaml  lost_docs.tsv
bot/: create.py  middlewares.py
bot/routers/: consultant.py  start.py
docs/: build_pdf.sh  teplodar-bot-flow.html
eval/: buyer_questions.txt  queries.yaml
scripts/: __init__.py  analyze_calls.py  build_index.py  chat.py  eval.py  eval_50_questions.py  eval_pipeline_50.py  import_faq_from_mango.py  ingest_yml.py  kb_fix_202607.py  normalize_ocr.py  ocr_pdfs.py  openrouter_test.py  parse_pdfs.py  perf_diagnose.py  query.py  run_buyer_eval.py  run_buyer_questions.py  scrape_company_info.py  scrape_dealers.py  scrape_products.py  seed_faq_mango.py  seed_synonyms.py  stream_test.py  test_hybrid.py
src/: __init__.py  main.py
src/core/: claude_cli.py  claude_token.py  config.py  (+5 more)
(+73 files in other folders)
